[package]
name = "watershot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
gdk = "0.16.2"
gdk-pixbuf = "0.16.7"
glib = "0.16.7"
gtk = "0.16.2"
gtk-layer-shell = { version = "0.5.0", features = ["v0_6"] }
image = "0.24.5"
ron = "0.8.0"
serde = { version = "1.0.151", features = ["derive"] }
