[package]
name = "watershot"
authors = ["Kirottu"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smithay-client-toolkit = { git = "https://github.com/smithay/client-toolkit", rev = "327f9cd791d8810fe7324ee1ddd48adaf3592ca4" }
image = { version = "0.24.5", features = ["webp-encoder"] }
ron = "0.8.0"
raqote = { version = "0.8.1", default-features = false }
serde = { version = "1.0.152", features = ["derive"] }
fontconfig = "0.6.0"
fontdue = "0.7.2"
wl-clipboard-rs = "0.7.0"
nix = { version = "0.26.1", default-features = false, features = ["process"] }
clap = { version = "4.0.32", features = ["derive"] }
chrono = "0.4.23"
env_logger = "0.10.0"
log = "0.4.17"
