[package]
name = "watershot"
authors = ["Kirottu"]
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smithay-client-toolkit = "0.17.0"
wayland-backend = { version = "0.1.2", features = ["client_system"] }
wayland-client = { version = "0.30.2", features = ["calloop"] }
image = { version = "0.24.5", default-features = false, features = ["farbfeld", "jpeg", "jpeg_rayon", "png", "webp-encoder"] }
ron = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
fontconfig = "0.6.0"
wl-clipboard-rs = "0.7.0"
nix = { version = "0.26.1", default-features = false, features = ["process"] }
clap = { version = "4.0.32", features = ["derive"] }
chrono = "0.4.23"
env_logger = { version = "0.10.0", default-features = false, features = ["auto-color"] }
log = "0.4.17"
wgpu = "0.16.1"
raw-window-handle = "0.5.2"
pollster = "0.3.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
wgpu_text = "0.8.1"
